changed zsh theme and tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,7 @@ set -g prefix C-Space
 bind C-Space send-prefix
 
 # 256 color support
-set -g default-terminal "tmux"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "screen-256color"
 
 # Start window numbers from 1
 set -g base-index 1
@@ -15,21 +14,19 @@ set -g history-limit 5000
 
 # Mouse support
 set-option -g mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+#set -g mouse-select-window on
 
 bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
-# Powerline
-set-option -g status on
-set-option -g status-interval 2
-set-option -g status-justify "centre"
-set-option -g status-left-length 60
-set-option -g status-right-length 90
-set-option -g status-left "#(~.tmux/tmux-powerline/powerline.sh left)"
-set-option -g status-right "#(~.tmux/tmux-powerline/powerline.sh right)"
+# TMUX PLUGINS
 
-set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
