Added hyper term config and polybar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,8 @@ set -g prefix C-Space
 bind C-Space send-prefix
 
 # 256 color support
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color-italic"
 
 # Start window numbers from 1
 set -g base-index 1
