--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -8,7 +8,7 @@
 ;=====================================================
 
 [colors]
-background = #222
+background = #282c34
 background-alt = #444
 foreground = #dfdfdf
 foreground-alt = #888
@@ -40,15 +40,15 @@ border-bottom-size = 2
 border-bottom-color = #333
 
 spacing = 1
-padding-left = 3
+padding-left = 2
 padding-right = 2
 module-margin-left = 1
-module-margin-right = 2
+module-margin-right = 1
 
 font-0 = Fira\ Code:pixelsize=9
-font-1 = Wuncon Siji:pixelsize=12;0
-font-2 = Wuncon Siji:pixelsize=12;0
-font-3 = Wuncon Siji:pixelsize=12;0
+font-1 = Material\ Design\ Icons:pixelsize=11;0
+font-2 = Material\ Design\ Icons:pixelsize=11;0
+font-3 = Material\ Design\ Icons:pixelsize=11;0
 
 modules-left = xwindow
 modules-center =
@@ -75,6 +75,8 @@ type = custom/script
 interval = 1200
 format = <label>
 format-underline = #dc322f
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
 label = "%output:0:30%"
 exec = /home/etienne/.config/polybar/pkg.sh
 exec-if = "ping -q -w 2 -c 1 176.34.135.167 > /dev/null"
@@ -83,30 +85,34 @@ exec-if = "ping -q -w 2 -c 1 176.34.135.167 > /dev/null"
 type = custom/script
 exec = pgrep openvpn
 interval = 30
-label = vpn
+label = VPN
 format-underline = #268bd2
-format-prefix = " "
-format-prefix-foreground = #5b
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
 
 [module/spotify]
 type = custom/script
-exec = spotify-now -i "%artist - %title" -e "-" -p "paused"
+exec = spotify-now -i "%artist - %title"
+exec-if = spotify-now -i "1" -p "0" -e "0" | grep 1
 interval = 15
-label = "%output:0:20%"
-format-prefix = " "
+label = "%output:0:30%"
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #6ae368
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:35:...%
+label = %title:0:50:...%
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = #555
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
 format-underline = ${colors.secondary}
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 
 label-layout = %layout%
@@ -199,12 +205,11 @@ toggle-off-foreground = #66
 [module/backlight]
 type = internal/xbacklight
 
-format = <label> <bar>
-label = BL
+format = <bar>
 
 bar-width = 10
-bar-indicator = │
-bar-indicator-foreground = #ff
+bar-indicator = 
+bar-indicator-foreground = ${colors.foreground-alt}
 bar-indicator-font = 2
 bar-fill = ─
 bar-fill-font = 2
@@ -234,7 +239,7 @@ type = internal/network
 interface = wlp2s0
 interval = 3.0
 
-format-connected = <ramp-signal> <label-connected>
+format-connected = <ramp-signal><label-connected>
 format-connected-underline = #9f78e1
 format-disconnected-underline = ${self.format-connected-underline}
 
@@ -242,11 +247,11 @@ label-connected = %essid%
 label-disconnected = %ifname% disconnected
 label-disconnected-foreground = ${colors.foreground-alt}
 
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
 ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
@@ -255,7 +260,7 @@ interface = enp1s0f1
 interval = 3.0
 
 format-connected-underline = #55aa55
-format-connected-prefix = " "
+format-connected-prefix = " "
 format-connected-foreground-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 
@@ -273,7 +278,7 @@ date-alt = " %Y-%m-%d"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
+format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #0a6cf5
 
@@ -282,11 +287,9 @@ label = %date% %time%
 [module/volume]
 type = internal/volume
 
-format-volume = <label-volume> <bar-volume>
-label-volume = VOL
-label-volume-foreground = ${root.foreground}
+format-volume = <bar-volume>
 
-format-muted-prefix = " "
+format-muted-prefix = " "
 format-muted-foreground = ${colors.foreground-alt}
 label-muted = sound muted
 
@@ -298,10 +301,10 @@ bar-volume-foreground-3 = #55aa55
 bar-volume-foreground-4 = #55aa55
 bar-volume-foreground-5 = #f5a70a
 bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = │
+bar-volume-gradient = true
+bar-volume-indicator = 
 bar-volume-indicator-font = 2
-bar-volume-indicator-foreground = #ff
+bar-volume-indicator-foreground = ${colors.foreground-alt}
 bar-volume-fill = ─
 bar-volume-fill-font = 2
 bar-volume-empty = ─
@@ -314,24 +317,24 @@ battery = BAT1
 adapter = ACAD
 full-at = 98
 
-format-charging = <animation-charging> <label-charging>
+format-charging = <animation-charging><label-charging>
 format-charging-underline = #ffb52a
 
-format-discharging = <ramp-capacity> <label-discharging>
+format-discharging = <ramp-capacity><label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = " "
+format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
 format-full-underline = ${self.format-charging-underline}
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
 ramp-capacity-foreground = ${colors.foreground-alt}
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
 animation-charging-foreground = ${colors.foreground-alt}
 animation-charging-framerate = 750
 
@@ -356,27 +359,28 @@ ramp-foreground = ${colors.foreground-alt}
 
 [module/powermenu]
 type = custom/menu
+format-underline = ${colors.secondary}
 
-label-open =  power
+label-open =  POWER
 label-open-foreground = ${colors.secondary}
-label-close =  cancel
+label-close =  CANCEL
 label-close-foreground = ${colors.secondary}
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
 
-menu-0-0 = reboot
+menu-0-0 = REBOOT
 menu-0-0-exec = menu-open-1
-menu-0-1 = power off
+menu-0-1 = POWER OFF
 menu-0-1-exec = menu-open-2
 
-menu-1-0 = cancel
+menu-1-0 = CANCEL
 menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
+menu-1-1 = REBOOT
 menu-1-1-exec = sudo reboot
 
-menu-2-0 = power off
+menu-2-0 = POWER OFF
 menu-2-0-exec = sudo poweroff
-menu-2-1 = cancel
+menu-2-1 = CANCEL
 menu-2-1-exec = menu-open-0
 
 ; vim:ft=dosini
