--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -23,9 +23,11 @@ margin-bottom = 5
 [bar/bar]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 27
+height = 29
 offset-x = 0
 offset-y = 0
+
+;bottom = true
 
 ;background = ${xrdb:color9}
 background = ${colors.background}
@@ -40,7 +42,7 @@ border-bottom-size = 2
 border-bottom-color = #333
 
 spacing = 1
-padding-left = 2
+padding-left = 1
 padding-right = 2
 module-margin-left = 1
 module-margin-right = 1
@@ -56,19 +58,9 @@ modules-right = backlight volume vpncheck pkg spotify xkeyboard wlan battery dat
 
 tray-position = right
 tray-padding = 2
-;tray-transparent = true
-;tray-background = #0063ff
 
-;wm-restack = bspwm
-;wm-restack = i3
-
-;override-redirect = true
-
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
+scroll-up = herbstclient use_index +1
+scroll-down = herbstclient use_index -1
 
 [module/pkg]
 type = custom/script
@@ -78,7 +70,7 @@ format-underline = #dc322f
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 label = "%output:0:30%"
-exec = /home/etienne/.config/polybar/pkg.sh
+exec = /home/etienne/.scripts/pkg.sh
 exec-if = "ping -q -w 2 -c 1 176.34.135.167 > /dev/null"
 
 [module/vpncheck]
@@ -93,12 +85,15 @@ format-prefix-foreground = ${colors.foreground-alt}
 [module/spotify]
 type = custom/script
 exec = spotify-now -i "%artist - %title"
-exec-if = spotify-now -i "1" -p "0" -e "0" | grep 1
-interval = 15
+exec-if = spotify-now -i "1" -p "1" -e "0" | grep 1
+interval = 5
 label = "%output:0:30%"
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #6ae368
+scroll-down = /home/etienne/.scripts/spotify.sh 2
+scroll-up = /home/etienne/.scripts/spotify.sh 1
+click-left = /home/etienne/.scripts/spotify.sh 0
 
 [module/xwindow]
 type = internal/xwindow
@@ -133,74 +128,6 @@ label-mounted = %mountpoint%: %percentage_free%
 
 label-unmounted = %mountpoint%: not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
-
-[module/bspwm]
-type = internal/bspwm
-ws-icon-default = x
-
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
-label-focused-padding = 2
-
-label-occupied = %index%
-label-occupied-padding = 2
-
-label-urgent = %index%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
-
-label-empty = %index%
-label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
-
-[module/i3]
-type = internal/i3
-format = <label-state> <label-mode>
-index-sort = true
-
-label-mode = %mode%
-label-mode-padding = 2
-label-mode-foreground = #000
-label-mode-background = ${colors.primary}
-
-label-focused = %index%
-label-focused-background = ${module/bspwm.label-focused-background}
-label-focused-underline = ${module/bspwm.label-focused-underline}
-label-focused-padding = ${module/bspwm.label-focused-padding}
-
-label-unfocused = %index%
-label-unfocused-padding = ${module/bspwm.label-occupied-padding}
-
-label-urgent = %index%!
-label-urgent-background = ${colors.alert}
-label-urgent-padding = ${module/bspwm.label-urgent-padding}
-
-label-visible = %index%
-label-visible-foreground = ${module/bspwm.label-empty-padding}
-label-visible-padding = ${module/bspwm.label-empty-padding}
-
-[module/mpd]
-type = internal/mpd
-
-format-online = <label-song>  <icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next>  <icon-repeat> <icon-random>
-
-label-song-maxlen = 25
-label-song-ellipsis = true
-
-icon-prev = 
-icon-seekb = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
-icon-seekf = 
-
-icon-random = 
-icon-repeat = 
-
-toggle-on-foreground = ${colors.primary}
-toggle-off-foreground = #66
 
 [module/backlight]
 type = internal/xbacklight
@@ -377,17 +304,16 @@ menu-0-2-exec = menu-open-3
 
 menu-1-0 = CANCEL
 menu-1-0-exec = menu-open-0
-menu-1-1 = OK
+menu-1-1 = REBOOT
 menu-1-1-exec = sudo reboot
 
-menu-2-0 = OK
+menu-2-0 = OFF
 menu-2-0-exec = sudo poweroff
 menu-2-1 = CANCEL
 menu-2-1-exec = menu-open-0
 
-menu-3-0 = OK
+menu-3-0 = LOCK
 menu-3-0-exec = /home/etienne/.scripts/suspend
 menu-3-1 = CANCEL
 menu-3-1-exec = menu-open-0
 
-; vim:ft=dosini
