--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -10,8 +10,8 @@
 [colors]
 background = #282c34
 background-alt = #444
-foreground = #dfdfdf
-foreground-alt = #888
+foreground = #fff
+foreground-alt = #aaa
 primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
@@ -23,7 +23,7 @@ margin-bottom = 5
 [bar/bar]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 29
+height = 25
 offset-x = 0
 offset-y = 0
 
@@ -41,20 +41,18 @@ underline-color = #00f
 border-bottom-size = 0
 border-bottom-color = #333
 
-spacing = 0
+spacing = 1
 padding-left = 2
 padding-right = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = Fira\ Code:pixelsize=9
-font-1 = Material\ Design\ Icons:pixelsize=11;0
-font-2 = Material\ Design\ Icons:pixelsize=11;0
-font-3 = Material\ Design\ Icons:pixelsize=11;0
+font-0 = Fira\ Code:pixelsize=8
+font-1 = Material\ Design\ Icons:pixelsize=9;0
 
-modules-left = xwindow
+modules-left = xwindow spotify
 modules-center =
-modules-right = backlight volume vpncheck pkg spotify xkeyboard wlan battery date powermenu
+modules-right = backlight volume vpncheck wlan pkg xkeyboard battery date powermenu
 
 tray-position = right
 tray-padding = 2
@@ -87,7 +85,7 @@ type = custom/script
 exec = spotify-now -i "%artist - %title"
 exec-if = spotify-now -i "1" -p "1" -e "0" | grep 1
 interval = 5
-label = "%output:0:30%"
+label = "%output:0:50%"
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #6ae368
@@ -97,7 +95,7 @@ click-left = /home/etienne/.scripts/spotify.sh 0
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:50:...%
+label = %title:0:60:...%
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #555
@@ -288,7 +286,7 @@ ramp-foreground = ${colors.foreground-alt}
 type = custom/menu
 format-underline = ${colors.secondary}
 
-label-open =  POWER
+label-open = 
 label-open-foreground = ${colors.secondary}
 label-close =  CANCEL
 label-close-foreground = ${colors.secondary}
