--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -12,8 +12,8 @@ background = #282c34
 background-alt = #444
 foreground = #fff
 foreground-alt = #aaa
-primary = #ffb52a
-secondary = #e60053
+primary = #0E4749
+secondary = #E55812
 alert = #bd2c40
 
 [global/wm]
@@ -35,7 +35,7 @@ foreground = ${colors.foreground}
 
 overline-size = 0
 overline-color = #f00
-underline-size = 1
+underline-size = 2
 underline-color = #00f
 
 border-bottom-size = 0
@@ -48,13 +48,13 @@ module-margin-left = 1
 module-margin-right = 1
 
 font-0 = Fira\ Code:pixelsize=8
-font-1 = Material\ Design\ Icons:pixelsize=9;0
+font-1 = Material\ Design\ Icons:pixelsize=10;0
 
-modules-left = xwindow spotify
-modules-center =
-modules-right = backlight volume vpncheck wlan pkg xkeyboard battery date powermenu
+modules-left = date xwindow
+modules-center = backlight volume
+modules-right = spotify vpncheck pkg xkeyboard battery wlan powermenu
 
-tray-position = right
+tray-position = left
 tray-padding = 2
 
 scroll-up = herbstclient use_index +1
@@ -65,7 +65,7 @@ type = custom/script
 interval = 1200
 format = <label>
 format-underline = #dc322f
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 label = "%output:0:30%"
 exec = /home/etienne/.scripts/pkg.sh
@@ -84,9 +84,9 @@ format-prefix-foreground = ${colors.foreground-alt}
 type = custom/script
 exec = spotify-now -i "%artist - %title"
 exec-if = spotify-now -i "1" -p "1" -e "0" | grep 1
-interval = 5
-label = "%output:0:50%"
-format-prefix = " "
+interval = 2
+label = "%output:0:80%"
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #6ae368
 scroll-down = /home/etienne/.scripts/spotify.sh 2
@@ -95,17 +95,17 @@ click-left = /home/etienne/.scripts/spotify.sh 0
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
-format-prefix = " "
+label = %title:0:80:...%
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #555
+format-underline = #888
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
 format-underline = ${colors.secondary}
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 
 label-layout = %layout%
@@ -133,7 +133,7 @@ type = internal/xbacklight
 format = <bar>
 
 bar-width = 10
-bar-indicator = 
+bar-indicator = 
 bar-indicator-foreground = ${colors.foreground-alt}
 bar-indicator-font = 2
 bar-fill = ─
@@ -165,7 +165,7 @@ interface = wlp2s0
 interval = 3.0
 
 format-connected = <ramp-signal><label-connected>
-format-connected-underline = #9f78e1
+format-connected-underline = #95C623
 format-disconnected-underline = ${self.format-connected-underline}
 
 label-connected = %essid%
@@ -198,16 +198,16 @@ type = internal/date
 interval = 5
 
 date =
-date-alt = " %Y-%m-%d"
+date-alt = "%Y-%m-%d "
 
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
+format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
+format-underline = #279296
 
-label = %date% %time%
+label = %time% %date%
 
 [module/volume]
 type = internal/volume
@@ -286,9 +286,9 @@ ramp-foreground = ${colors.foreground-alt}
 type = custom/menu
 format-underline = ${colors.secondary}
 
-label-open = 
+label-open = 
 label-open-foreground = ${colors.secondary}
-label-close =  CANCEL
+label-close =  CANCEL
 label-close-foreground = ${colors.secondary}
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
